--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <div class="bg-circle-4 bg-circle"></div>
 
             <img class="ex1" src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png">
+            <img class="ex2" src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png">
+
         </header>
         <!-- Content section 1-->
         <section id="scroll">
