--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
 
-            <img class="ex1" src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png">
-            <img class="ex2" src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png">
+            <div class="row">
+  <div class="column">
+    <img src="img_snow.jpg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="img_forest.jpg" alt="Forest" style="width:100%">
+  </div>
+
+</div>
 
         </header>
         <!-- Content section 1-->
