--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="column">
     <img src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png" alt="Snow" style="width:10%">
   </div>
-  <div class="column">
+  <div class="column img2">
     <img src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png" alt="Forest" style="width:10%">
   </div>
 
