--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
         <!-- Header-->
+        
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
@@ -50,11 +51,14 @@
             <div class="bg-circle-4 bg-circle"></div>
 
             <div class="row">
-  <div class="column">
-    <img src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png" alt="Snow" style="width:10%">
+  <div class="column image-size">
+    <img src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png" alt="Snow" style="width:30%">
   </div>
-  <div class="img2">
-    <img src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png" alt="Forest" style="width:10%">
+  <div class="column">
+    <img src="" alt="" style="width:10%">
+  </div>
+  <div class="column image-size">
+    <img src="https://www.frhsd.com/cms/lib/NJ01912687/Centricity/Template/GlobalAssets/images///Logos/FT%20Emboss.png" alt="Forest" style="width:30%">
   </div>
 
 </div>
@@ -69,7 +73,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Principle</h2>
+                            <h2 class="display-4">Principal</h2>
                             <p>The Principle of Freehold Township High School, Dr. Alicia K. Scelso</p>
                         </div>
                     </div>
@@ -85,7 +89,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">Assistant Principle</h2>
+                            <h2 class="display-4">Assistant Principal</h2>
                             <p>The Assistant Principle of Freehold Township High School, Dr. Shae-Brie Dow</p>
                         </div>
                     </div>
