--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="studenthandbook.html">Student Handbook</a></li>
                         <li class="nav-item"><a class="nav-link" href="staff.html">Staff Directory </a></li>
-
+                        <li class="nav-item"><a class="nav-link" href="clubs.html">Clubs</a></li>\
                         <li class="nav-item"><a class="nav-link" href="#!">Log In</a></li>
                     </ul>
                 </div>
