--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="studenthandbook.html">Student Handbook</a></li>
                         <li class="nav-item"><a class="nav-link" href="staff.html">Staff Directory </a></li>
-
+                        <li class="nav-item"><a class="nav-link" href="clubs.html">Clubs</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Log In</a></li>
                     </ul>
                 </div>
@@ -36,7 +36,7 @@
 
 
         <!-- Header-->
-        
+
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
