--- a/clubs.html
+++ b/clubs.html
@@ -33,3 +33,59 @@
                 </div>
             </div>
         </nav>
+        <div id="demo" class="carousel slide" data-ride="carousel">
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+          </ul>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://www.gannett-cdn.com/presto/2020/10/24/PAPP/ad226653-81ed-453b-a20e-4108c6bd4a75-fbftcn201023q.jpg?crop=5183,2915,x0,y157&width=3200&height=1800&format=pjpg&auto=webp" alt="Los Angeles" width="1100" height="500">
+              <div class="carousel-caption">
+                <h3>Los Angeles</h3>
+                <p>We had such a great time in LA!</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="https://townsquare.media/site/380/files/2021/05/WK-2-BB-TOTW-Freehold-Twp-e1620368526271.jpg" alt="Chicago" width="1100" height="500">
+              <div class="carousel-caption">
+                <h3>Chicago</h3>
+                <p>Thank you, Chicago!</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSz2JC1Iw2ub395egnXIhMeYubQaZY_cUj6yg&usqp=CAU" alt="New York" width="1100" height="500">
+              <div class="carousel-caption">
+                <h3>New York</h3>
+                <p>We love the Big Apple!</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="https://www.nj.com/resizer/HKEDkjvBgWndoQ_UZAqgjrrBCgs=/1280x0/smart/cloudfront-us-east-1.images.arcpublishing.com/advancelocal/NYPBZHRX2BARFLDMNY3XJ3HDUY.JPEG" alt="New York" width="1100" height="500">
+              <div class="carousel-caption">
+                <h3>New York</h3>
+                <p>We love the Big Apple!</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
+
+
+
+        <!-- Footer-->
+        <footer class="py-5 bg-black">
+            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
