--- a/clubs.html
+++ b/clubs.html
@@ -13,6 +13,9 @@
         <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
         <link href="style.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -41,31 +44,31 @@
           </ul>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://www.gannett-cdn.com/presto/2020/10/24/PAPP/ad226653-81ed-453b-a20e-4108c6bd4a75-fbftcn201023q.jpg?crop=5183,2915,x0,y157&width=3200&height=1800&format=pjpg&auto=webp" alt="Los Angeles" width="1100" height="500">
+              <img src="https://www.gannett-cdn.com/presto/2020/10/24/PAPP/ad226653-81ed-453b-a20e-4108c6bd4a75-fbftcn201023q.jpg?crop=5183,2915,x0,y157&width=3200&height=1800&format=pjpg&auto=webp" alt="Los Angeles" width="2000" height="1000">
               <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in LA!</p>
+                <h3>FTHS Football Team</h3>
+                <p>Thank you, boys!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://townsquare.media/site/380/files/2021/05/WK-2-BB-TOTW-Freehold-Twp-e1620368526271.jpg" alt="Chicago" width="1100" height="500">
+              <img src="https://townsquare.media/site/380/files/2021/05/WK-2-BB-TOTW-Freehold-Twp-e1620368526271.jpg" alt="Chicago" width="2000" height="1000">
               <div class="carousel-caption">
-                <h3>Chicago</h3>
-                <p>Thank you, Chicago!</p>
+                <h3>FTHS Baseball Team</h3>
+                <p>Thank you, boys!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSz2JC1Iw2ub395egnXIhMeYubQaZY_cUj6yg&usqp=CAU" alt="New York" width="1100" height="500">
+              <img src="https://townsquare.media/site/380/files/2021/12/attachment-MVIMG_20191023_192934-e1639167189828.jpg" alt="New York" width="2000" height="1000">
               <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+                <h3>FTHS Boys Soccer Team</h3>
+                <p>Thank you, boys!</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://www.nj.com/resizer/HKEDkjvBgWndoQ_UZAqgjrrBCgs=/1280x0/smart/cloudfront-us-east-1.images.arcpublishing.com/advancelocal/NYPBZHRX2BARFLDMNY3XJ3HDUY.JPEG" alt="New York" width="1100" height="500">
+              <img src="https://www.nj.com/resizer/HKEDkjvBgWndoQ_UZAqgjrrBCgs=/1280x0/smart/cloudfront-us-east-1.images.arcpublishing.com/advancelocal/NYPBZHRX2BARFLDMNY3XJ3HDUY.JPEG" alt="New York" width="2000" height="1000">
               <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+                <h3>FTHS Girl Soccer Team</h3>
+                <p>Thank you, girls!</p>
               </div>
             </div>
           </div>
