--- a/clubs.html
+++ b/clubs.html
@@ -83,9 +83,46 @@
 
 
         <!-- Footer-->
-        <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p></div>
-        </footer>
+        <div class="footer">
+        <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <p class="mb-4"><img src="https://nj.vsand-static.com/Logos/3191.png?maxwidth=1100&maxheight=1100" alt="Image" class="img-fluid"></p>
+          </div>
+          <div class="col-lg-3">
+            <h3 class="footer-heading"><span>Important Links</span></h3>
+            <ul class="list-unstyled">
+                <li><a href="#">Student-Family Handbook</a></li>
+                <li><a href="#">Calender</a></li>
+                <li><a href="#">Parent Portal</a></li>
+                <li><a href="#">Email Access</a></li>
+                <li><a href="#">Staff Directory</a></li>
+                <li><a href="#">FRHSD App</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+              <h3 class="footer-heading"><span>Announcements</span></h3>
+              <ul class="list-unstyled">
+                  <li><a href="#">COVID-19 Reporting Form</a></li>
+                  <li><a href="#">Option II/Sports Alternative</a></li>
+                  <li><a href="#">Cap and Gown Orders</a></li>
+                  <li><a href="#">Block Schedule Template</a></li>
+                  <li><a href="#">Student Lunch Account Contact</a></li>
+                  <li><a href="#">WORKING PAPERS - FTHS</a></li>
+              </ul>
+          </div>
+          <div class="col-lg-3">
+              <h3 class="footer-heading"><span>Contact</span></h3>
+              <ul class="list-unstyled">
+                  <li>281 Elton-Adelphia Road</li>
+                  <li>Freehold, NJ 07728</li>
+                  <li>Phone: 732-431-8460</li>
+                  <li>Fax: 732-780-5314</li>
+              </ul>
+          </div>
+        </div>
+        </div>
+        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
