--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <h1 class="masthead-heading mb-0">Freehold Township High School</h1>
                     <h2 class="masthead-subheading mb-0">Home of the Patriots</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Contact Us</a>
+                    <br>
+                    <br>
+                    <img src="images/sig.png">
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
@@ -117,7 +120,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <p class="mb-4"><img src="images/main.png" alt="Image" class="img-fluid"></p>
+            <p class="mb-4"><img src="https://nj.vsand-static.com/Logos/3191.png?maxwidth=1100&maxheight=1100" alt="Image" class="img-fluid"></p>
           </div>
           <div class="col-lg-3">
             <h3 class="footer-heading"><span>Important Links</span></h3>
